<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<group android:id="@+id/mixare_menu_items" android:visible="false">
		<item android:title="@string/menu_item_set_range" android:id="@+id/mixare_menu_item_set_range" android:icon="@drawable/ic_menu_zoom" />
		<item android:title="@string/menu_item_show_hidden_markers" android:id="@+id/mixare_menu_item_show_hidden_markers" android:icon="@drawable/ic_menu_revert" />
		<item android:title="@string/menu_item_gps_info" android:id="@+id/mixare_menu_item_gps_info" android:icon="@drawable/ic_menu_info_details"/>
	</group>
	
	<group android:id="@+id/app_menu_items" android:visible="true">
		<item android:title="@string/menu_item_elev_range" android:id="@+id/menu_item_elev_range" android:icon="@drawable/ic_menu_set_elevation_range" />
		<item android:title="@string/menu_item_help_text" android:id="@+id/menu_item_help" android:icon="@drawable/ic_menu_help"/>
		<item android:title="@string/menu_item_license_text" android:id="@+id/menu_item_license" android:icon="@drawable/ic_menu_license" />
	</group>
</menu>