<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center" >

   <ScrollView
       android:layout_width="fill_parent"
       android:layout_height="150dp"
       android:layout_margin="20dp">
		
		<TextView
	   		android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="20dp"
			android:text="@string/dialog_startup_text"
			android:textColor="#000000"
			android:textSize="18dp" />
	</ScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
	    <Button
			android:id="@+id/dialog_dismiss_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:layout_margin="10dp"
			android:text="@string/dialog_okay_button_text" />
	    
	    <Button
			android:id="@+id/dialog_help_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:layout_margin="10dp"
			android:text="@string/dialog_help_button_text" />
	    
	    <Button
			android:id="@+id/dialog_license_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:layout_margin="10dp"
			android:text="@string/dialog_license_button_text" />
	</LinearLayout>

	<CheckBox
		android:id="@+id/dialog_hide_in_future"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:layout_marginLeft="25dp"
		android:layout_marginBottom="5dp"
		android:text="@string/dialog_dont_show_in_future_text"/>
</LinearLayout>